# ScanR

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  docker-compose.sandbox.yml  docker-compose.self-update.yml  docker-compose.yml
backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements.txt  test_plugin.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_user_lockout.py  0003_vpr_score.py  0004_host_tags.py  0005_plugin_runs.py  0006_create_schedules.py  0007_pentest_gaps.py  0008_scan_heartbeat.py  0009_app_settings.py  0010_ai_results.py  0011_ai_agent_runs.py  0012_agent_pending_approval.py  0013_agent_capabilities.py  0014_scan_ai_agent.py  0015_agent_max_iterations.py  0016_agent_conversation.py  0017_agent_max_tokens.py  0018_agent_rate_limit.py  0019_agent_heartbeat.py
backend/sandbox/: Dockerfile.proxy  Dockerfile.runner  Dockerfile.sandbox
backend/sandbox/proxy/: filter  tinyproxy.conf
backend/scanr/: config.py  deps.py  main.py
backend/scanr/agent/: full_runner.py  runner.py
backend/scanr/ai/: __init__.py  settings_store.py
backend/scanr/ai/agent/: __init__.py  autostart.py  context.py  db_context.py  loop.py  policy.py  prompts.py  tools.py
backend/scanr/ai/assist/: __init__.py  _common.py  false_positive.py  report.py  summary.py
backend/scanr/ai/llm/: __init__.py  anthropic.py  base.py  factory.py  models.py  openai_compat.py
backend/scanr/api/: router.py  websocket.py
backend/scanr/api/v1/: agent_jobs.py  agents.py  ai.py  analytics.py  api_keys.py  assets.py  auth.py  credentials.py  exclusions.py  findings.py  host_tags.py  plugins.py  profile_suggest.py  reports.py  scans.py  schedules.py  screenshots.py  system.py  templates.py  users.py  vulnerabilities.py  webhooks.py  wordlists.py
backend/scanr/auth/: __init__.py  api_key_auth.py  jwt_handler.py  password.py  rbac.py
backend/scanr/cli/: main.py
backend/scanr/core/: compliance.py  context.py  credential_chain.py  delta_engine.py  engine.py  limiter.py  mitre.py  plugin_base.py  plugin_manager.py  rate_limiter.py  result_collector.py  scan_logger.py  stealth.py  webhook_dispatcher.py
backend/scanr/credentials/: __init__.py  vault.py
backend/scanr/db/: __init__.py  init_db.py  migration_utils.py  redis.py  session.py
backend/scanr/models/: __init__.py  ai_agent_run.py  ai_result.py  api_key.py  base.py  credential.py  exclusion.py  finding.py  host.py  plugin.py  plugin_run.py  port.py  report.py  scan.py  scan_agent.py  scan_credential.py  scan_template.py  schedule.py  screenshot.py  service.py  setting.py  target.py  user.py  webhook.py  wordlist.py
backend/scanr/plugins/authenticated/: docker_privileged_check.py  ssh_audit.py
backend/scanr/plugins/cve/: cve_matcher.py  kev_cache.py  nvd_loader.py
backend/scanr/plugins/network/: _pentest_common.py  dns_recon.py  dns_zone_transfer.py  dnssec_caa_check.py  email_security.py  icmp_info.py  ipv6_discovery.py  open_ports_info.py  subdomain_enum.py  subdomain_takeover.py
backend/scanr/plugins/nuclei/: nuclei_runner.py
backend/scanr/plugins/services/: _pentest_common.py  ad_password_policy.py  adb_unauth.py  adcs_enum.py  admin_share_access.py  asreproastable.py  bacnet_detect.py  bluekeep_check.py  cassandra_unauth.py  cisco_smart_install.py  clickhouse_unauth.py  consul_vault_nomad_exposure.py  couchdb_unauth.py  dcsync_check.py  dns_zone_transfer.py  docker_daemon_unauth.py  etcd_unauth.py  (+63 more)
backend/scanr/reporting/: bloodhound_renderer.py  csv_renderer.py  executive_summary.py  html_renderer.py  json_renderer.py  pdf_renderer.py  report_engine.py  sarif_renderer.py
backend/scanr/sandbox/: __init__.py  client.py  runner_app.py
backend/scanr/schemas/: __init__.py  auth.py  credential.py  finding.py  host.py  plugin.py  report.py  scan.py  schedule.py  user.py
backend/scanr/tasks/: agent_tasks.py  celery_app.py  report_tasks.py  scan_tasks.py  scheduler_task.py
backend/scanr/utils/: __init__.py  cvss.py  exceptions.py  ip_utils.py  logging.py  proxy.py
backend/tests/: conftest.py
backend/tests/integration/: test_ai_agent_endpoints.py  test_ai_api.py  test_api_auth.py  test_api_scans.py  test_api_scope_enforcement.py  test_api_security_regressions.py  test_api_users.py
backend/tests/unit/: test_ai.py  test_ai_agent.py  test_cert_inspector.py  test_cvss.py  test_engine_wordlist_scope.py  test_ip_utils.py  test_js_libraries.py  test_migrations.py  test_plugins_import.py  test_sandbox_runner.py  test_scan_ai_autostart.py  test_service_fallback.py  test_ssh_banner_grab.py  test_target_validation.py  test_tls_port_promotion.py  test_triage_isolation.py  test_vault.py
(+138 files in other folders)
