[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scanr"
version = "0.10.3"
description = "Professional vulnerability scanner for authorized penetration testing"
requires-python = ">=3.12"
dependencies = [
  # Web framework
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  # Async HTTP
  "httpx>=0.27.0",
  # Database
  "sqlalchemy[asyncio]>=2.0.0",
  "aiosqlite>=0.20.0",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  # Auth
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "pydantic-settings>=2.0.0",
  # Task queue
  "celery[redis]>=5.4.0",
  "redis>=5.0.0",
  # Scanning
  "python-nmap>=0.7.1",
  "scapy>=2.6.0",
  "paramiko>=3.4.0",
  "impacket>=0.11.0",
  "pysnmp>=6.1.0",
  "dnspython>=2.6.0",
  # TLS analysis
  "pyOpenSSL>=24.0.0",
  "cryptography>=42.0.0",
  # Scheduling
  "apscheduler>=3.10.0",
  # Reporting
  "jinja2>=3.1.0",
  "weasyprint>=62.0",
  "aiofiles>=23.0.0",
  # Logging
  "structlog>=24.0.0",
  # Screenshots
  "playwright>=1.44.0",
  # Misc
  "click>=8.1.0",
  "rich>=13.0.0",
  "pydantic>=2.0.0",
  "python-socketio>=5.11.0",
  "ldap3>=2.9.0",
  "slowapi>=0.1.9",
  "packaging>=24.0",
]

[project.optional-dependencies]
# AI providers — optional. Install with: pip install -e ".[ai]"
# Imported lazily by the provider adapters; the base package runs without them.
ai = [
  "anthropic>=0.40.0",
  "openai>=1.50.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "anyio>=4.0.0",
  "fakeredis>=2.20.0",
  "aiosqlite>=0.20.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
]

[project.scripts]
scanr = "scanr.cli.main:cli"
scanr-agent = "scanr.agent.runner:main"
scanr-agent-full = "scanr.agent.full_runner:main"

[tool.hatch.build.targets.wheel]
packages = ["scanr"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
  "E501", # long evidence/remediation strings are common in plugin metadata
  "E712", # SQLAlchemy boolean expressions intentionally use == True/False
  "F403", # legacy plugin helpers intentionally re-export common symbols
  "F405", # legacy plugin wildcard imports are tracked for later cleanup
]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Keep mypy active for models/schemas/auth/utils while the scanner/plugin/API
# surface is typed incrementally.
module = [
  "scanr.agent.*",
  "scanr.api.*",
  "scanr.cli.*",
  "scanr.core.*",
  "scanr.db.*",
  "scanr.deps",
  "scanr.main",
  "scanr.plugins.*",
  "scanr.reporting.*",
  "scanr.scanner.*",
  "scanr.tasks.*",
]
ignore_errors = true

[tool.hatch.metadata]
allow-direct-references = true
